# Research_Collaboration_System_GH

./: .env  .gitignore  .gitmessage  .terraform.lock.hcl  Dockerfile  README.md  docker-compose.azure.yml  docker-compose.yml  er.name  main.tf  pyproject.toml  pytest.ini  requirements.txt  research-collab-ppt-design-spec.md  research-collab-ppt-design-tokens.json
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
code/: api_server.py  api_versioning.py  auth_handler.py  check_all_users.py  check_user_case.py  check_user_debug.py  cli_interface.py  cli_typer.py  data_generator.py  database_manager.py  deep_inspect.py  demo_system.py  diagnose_names.py  fix_user_account.py  logging_config.py  query_engine.py  rbac.py  repopulate_db.py  report_generator.py  test_cassandra_fix.py  verify_auth.py  verify_profile_fix.py  web_interface.py
code/repositories/: __init__.py  cassandra_repo.py  mongo_repo.py  neo4j_repo.py  redis_repo.py
code/templates/: activity_status.html  activity_timeline.html  advanced_search.html  analytics.html  base.html  compare_researchers.html  (+15 more)
docs/: 00_project_summary.md  01_requirement_analysis.md  02_system_architecture.md  03_data_modeling.md  04_design_analysis.md  05_technical_implementation.md  AGILE_PROJECT_MANAGEMENT.md  SE_COMPLIANCE_CHECKLIST.md  project_report_arabic.md
k8s/: configmap-secrets.yaml  databases.yaml  deployment.yaml  ingress.yaml  service.yaml
templates/: base.html  dashboard.html  index.html
terraform/: main.tf  outputs.tf  variables.tf
(+14 files in other folders)
